Refactored SurveyController's filtering method to a reference style for better readability. Simplified the survey sorting method to "toList" for conciseness and clarity.